[gd_scene load_steps=7 format=3 uid="uid://bvgyusvjgbnbx"]

[ext_resource type="PackedScene" uid="uid://d3givt02dwnlp" path="res://scenes/tilemaps/hexagon_tile_map_layer.tscn" id="1_4pw8h"]
[ext_resource type="Script" uid="uid://w7rvakxl1g1t" path="res://scenes/adventure/adventure_tilemap/adventure_tilemap.gd" id="1_b7v0o"]
[ext_resource type="PackedScene" uid="uid://eomevugae50m" path="res://scenes/characters/main_character/character_body_2d.tscn" id="2_b7v0o"]
[ext_resource type="PackedScene" uid="uid://df31gdo3jg7rp" path="res://scenes/camera/camera_clamp_controller/camera_clamp_controller.tscn" id="4_yfmtn"]
[ext_resource type="PackedScene" uid="uid://cs1ystg6v3d2d" path="res://scenes/camera/camera_zoom_controller/camera_zoom_controller.tscn" id="4_ywsim"]
[ext_resource type="PackedScene" uid="uid://b0qowk3rd0jft" path="res://scenes/adventure/adventure_tilemap/encounter_info_panel.tscn" id="6_10now"]

[node name="AdventureTilemap" type="Node2D"]
script = ExtResource("1_b7v0o")

[node name="AdventureFullMap" parent="." instance=ExtResource("1_4pw8h")]
unique_name_in_owner = true
position = Vector2(-82, -95)
pathfinding_enabled = true

[node name="AdventureVisibleMap" parent="." instance=ExtResource("1_4pw8h")]
unique_name_in_owner = true
position = Vector2(-82, -95)
pathfinding_enabled = true

[node name="AdventureHighlightMap" parent="." instance=ExtResource("1_4pw8h")]
unique_name_in_owner = true
position = Vector2(-82, -95)
pathfinding_enabled = true

[node name="CharacterBody2D" parent="." instance=ExtResource("2_b7v0o")]
unique_name_in_owner = true
z_index = 1
is_debug_mode = false

[node name="Camera2D" type="Camera2D" parent="CharacterBody2D"]

[node name="CameraClampController" parent="CharacterBody2D/Camera2D" instance=ExtResource("4_yfmtn")]

[node name="CameraZoomController" parent="CharacterBody2D/Camera2D" instance=ExtResource("4_ywsim")]
zoom_min = 0.3
zoom_max = 1.5
zoom_default = 1.5
zoom_speed = 100.0

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 2

[node name="EncounterInfoPanel" parent="CanvasLayer" instance=ExtResource("6_10now")]
unique_name_in_owner = true
custom_minimum_size = Vector2(450, 600)
anchors_preset = 1
anchor_left = 1.0
anchor_bottom = 0.0
offset_left = -1805.0
offset_top = 270.0
offset_right = -1355.0
offset_bottom = 870.0
grow_horizontal = 0
grow_vertical = 1
